# Tela

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
cmake/: WaylandProtocol.cmake
examples/: CMakeLists.txt
examples/pong/: main.cpp
examples/sprite2d/: main.cpp
include/tela/: app.hpp  application.hpp  input.hpp  node.hpp  renderer.hpp  resources.hpp  texture.hpp  window.hpp
src/: app.cpp  application.cpp  input.cpp  input_platform.hpp  node.cpp
src/backend/wayland/: input.cpp  opengl_bridge.cpp  window.cpp  window.hpp
src/platform/linux/: resources.cpp
src/platform/wayland/: gl_bridge.cpp  input.cpp  opengl_bridge.cpp  window.cpp  window.hpp
src/renderer/opengl/: renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
